force-app/main/default/objects/clofor_com_cfs__INVOICING_VAT__c/fields/clofor_com_cfs__AmountOfTaxSellingFCYFMSFormula__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountOfTaxSellingFCYFMSFormula__c</fullName>
    <formula>clofor_com_cfs__INVOICING__r.clofor_com_cfs__SellTaxNum_USD__c</formula>
    <label>Amount of Tax Selling-Formu(FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>