force-app/main/default/objects/clofor_com_cfs__INVOICING_VAT__c/fields/clofor_com_cfs__AmountOfTaxSellingLocalForVAT__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountOfTaxSellingLocalForVAT__c</fullName>
    <label>AMOUNT OF TAX-SELLING(LOCAL) FOR VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>