force-app/main/default/objects/clofor_com_cfs__INVOICING_VAT__c/fields/clofor_com_cfs__otalAmountOfSellingFCYForVAT__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__otalAmountOfSellingFCYForVAT__c</fullName>
    <label>Total Amount of Selling(FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>