force-app/main/default/objects/clofor_com_cfs__INVOICING_VAT__c/fields/clofor_com_cfs__OutboundVATInvNo__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OutboundVATInvNo__c</fullName>
    <label>OUTBOUND VAT INV NO</label>
    <length>20</length>
    <type>Text</type>
</CustomField>