force-app/main/default/objects/clofor_com_cfs__INVOICING_VAT__c/fields/clofor_com_cfs__OutboundVATNoischanged__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OutboundVATNoischanged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outbound VAT No is changed</label>
    <type>Checkbox</type>
</CustomField>