force-app/main/default/objects/clofor_com_cfs__INVOICING_VAT__c/fields/clofor_com_cfs__TotalAmountOfBuyingLocalForVAT__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalAmountOfBuyingLocalForVAT__c</fullName>
    <label>TOTAL AMOUNT OF BUYING(LOCAL) FOR VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>