force-app/main/default/objects/clofor_com_cfs__INVOICING_VAT__c/fields/clofor_com_cfs__TotalAmountOfSellingFCYFMSFormula__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalAmountOfSellingFCYFMSFormula__c</fullName>
    <formula>clofor_com_cfs__INVOICING__r.clofor_com_cfs__SellAmountUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Selling-Fomu(FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>