force-app/main/default/objects/clofor_com_cfs__INVOICING_VAT__c/fields/clofor_com_cfs__TotalAmountOfSellingLocalFMSFormula__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalAmountOfSellingLocalFMSFormula__c</fullName>
    <formula>clofor_com_cfs__INVOICING__r.clofor_com_cfs__SellAmountJPN__c</formula>
    <label>TOTAL AMOUNT OF SELLING(LOCAL)-FMS FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>