force-app/main/default/objects/clofor_com_cfs__INVOICING_VAT__c/fields/clofor_com_cfs__TrxPlanID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TrxPlanID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TRX PLAN ID</label>
    <referenceTo>clofor_com_cfs__PaymentRequest__c</referenceTo>
    <relationshipName>FMSBillVAT</relationshipName>
    <type>Lookup</type>
</CustomField>