force-app/main/default/objects/clofor_com_cfs__INVOICING_VAT__c/fields/clofor_com_cfs__wkVATInvoiceSentDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__wkVATInvoiceSentDate__c</fullName>
    <formula>clofor_com_cfs__VAT_INVOICE__r.clofor_com_cfs__VATInvoiceSentDate__c</formula>
    <label>wkVAT Invoice Sent Date</label>
    <type>Date</type>
</CustomField>